# doccoon

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
doccoon_backend/: .env.example  Dockerfile  README.md  pyproject.toml
doccoon_backend/components/: __init__.py
doccoon_backend/config/: celery.py  settings.py  settings_test.py  urls.py
doccoon_backend/doccoon/: apps.py
doccoon_backend/doccoon/admin/: admin.py
doccoon_backend/doccoon/api/: permissions.py  response.py  throttling.py
doccoon_backend/doccoon/middleware/: __init__.py  logging.py  security.py
doccoon_backend/doccoon/migrations/: 0001_initial.py  0002_doccoon.py  0003_doccoonpage.py  0004_alter_doccoon_year.py  0005_doccoon_status_alter_doccoon_year.py  0006_notification_usersettings_sharedbook_sharedpage.py  0007_usersettings_profile_visible_usersettings_theme_and_more.py  0008_alter_aiproviderkey_api_key.py  0009_alter_doccoonpage_content.py  0010_usersettings_ai_model_and_more.py  0011_remove_usersettings_ai_model_aiproviderkey_model.py  0012_sharedpage_content_snapshot.py  0013_sharedbook_pages_snapshot.py  0014_encrypt_existing_api_keys.py  0015_usersettings_layout_mode_usersettings_live_preview_and_more.py  0016_make_description_optional.py  0017_add_auth_provider.py
doccoon_backend/doccoon/models/: __init__.py  abstracts.py  ai_provider_key.py  book.py  notification.py  settings.py  sharing.py  user.py
doccoon_backend/doccoon/routes/: ai.py  auth.py  book.py  (+5 more)
(+177 files in other folders)
